# kafka-schema-performance

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: docker-compose.kafka.yml
docs/: IMPLEMENTATION-PLAN.md  PRD-benchmark-utility.md
examples/reports/: golden_two_codecs.report.json
rubrics/: governance.v1.yaml  maintainability.v1.yaml
scripts/: wait_for_tcp.py
src/benchmark/: __init__.py  cli.py  env.py  registry_mock.py
src/benchmark/codecs/: __init__.py  avro_codec.py  base.py  common.py  json_codec.py  protobuf_codec.py
src/benchmark/fixtures/: __init__.py  analytics_event.schema.json  analytics_event_v1.avsc  analytics_event_v2.avsc  checksum.py  event.proto  event_pb2.py
src/benchmark/generate/: __init__.py  records.py
src/benchmark/integration/: __init__.py  kafka_e2e.py
src/benchmark/metrics/: __init__.py  compress.py  cost.py  sizes.py  stats.py
src/benchmark/models/: __init__.py  event.py
src/benchmark/report/: __init__.py  limitations.py  regression.py  render.py  rubrics_md.py
src/benchmark/scenarios/: __init__.py  runner.py
src/benchmark/viz/: __init__.py  distributed_html.py  stack_html.py  summary_html.py
tests/: test_cli_parse.py  test_codecs.py  test_codecs_negative_decode.py  test_distributed_performance.py  test_env_integrity.py  test_generators.py  test_golden_report_win_rate.py  test_metrics_stats_canned.py  test_registry_mock.py  test_regression.py  test_report_render.py  test_rubrics.py  test_runner.py  test_stats.py  test_viz_distributed_html.py  test_viz_stack_html.py  test_viz_summary_html.py
tests/integration/: __init__.py  conftest.py  test_kafka_distributed.py
